finishing help files for v0.70
git-svn-id: file:///tmp/Eisenkraut@118 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/help/AudioHeaderInfo.html
+++ b/trunk/help/AudioHeaderInfo.html
@@ -7,8 +7,13 @@
 </head>
 <body>
 <h1>Audio File Header</h1>
+<IMG SRC="AudioHeaderInfo.png" ALT="Screenshot of the Audio Header Info Palette">
 <p>
-a tiny window will pop up which allows you to change the sample rate of the current sound file. this is a mere &quot;header change&quot;, it will ot apply a resampling process. use this to correct sample rate information or to temporarily play back the file at a different speed and pitch.
+a tiny palette window allowing you to change the sample rate and commentary meta-information of the current sound file. This palette can be opened with one of the document's <A HREF="AudioInfo.html">audio info buttons</A>.
+</p><P>
+the sample rate change is a mere &quot;header change&quot;, it will not apply a resampling process. use this to correct sample rate information or to temporarily play back the file at a different speed and pitch.
+</P><P>
+<STRONG>Note:</STRONG> Currently, commentary information is only stored in AIFF and Snd/AU files. It is lost when saving to any other audio format.
 </P>
 </body>
 </html>
