--- a/trunk/help/ChannelPanorama.html
+++ b/trunk/help/ChannelPanorama.html
@@ -8,15 +8,17 @@
 <body>
 <h1>Channel Panorama</h1>
 <p>
-This window is opened by clicking on the circle icon in a <A HREF="ChannelTrack.html">channel's header panel</A>. It shows a disc representing the listening space with a small disc indicating azimuth and spread of the panorama. You can click and drag the disc to adjust the panorama. Moving it on the outmost circle results in minimum spread. Moving it to the second circle results in equal power spread which you will want in most cases. Moving the disc ot the center increases spread which means more adjectant speakers begin to play along with the most prominent one. The reddish colour of the speaker icons symbolize the amount of energy fed into them.
+This window is opened by clicking on the circle icon in a <A HREF="ChannelTrack.html">channel's header panel</A>. Alternatively, when you press and hold the mouse over this icon, the panorama window is opened as a popup panel next to the mouse.
+</p><P>
+The panel shows a disc representing the listening space with a small disc indicating azimuth and spread of the panorama. You can click and drag the disc to adjust the panorama. Moving it on the outmost circle results in minimum spread. Moving it to the second circle results in equal power spread which you will want in most cases. Moving the disc ot the center increases spread which means more adjectant speakers begin to play along with the most prominent one. The reddish colours of the speaker icons symbolize the amount of energy fed into them.
 </P>
-<IMG SRC="ChannelPanorama.png" ALT="">
+<IMG SRC="ChannelPanorama.png" ALT="Screenshot of the Panorama Panel">
 <P>
-The number of speakers corresponds to the number of channels of the current output routing, where routing channels are distributed in clockwise order with the first routing channel placed depending on the start-angle setting of the routing. By default a &quot;Stereo 1+2&quot; routing is created which simply consists of two channels playing on the first two audio interface channels, where the first channel is placed at -90 degrees, the second at +90 degrees.
+The number of speakers corresponds to the number of channels of the current output routing, where routing channels are distributed in clockwise order with the first routing channel placed depending on the start-angle setting of the routing. By default a &quot;Out&nbsp;1-2&quot; routing is created which simply consists of two channels playing on the first two audio interface channels, where the first channel is placed at -90 degrees, the second at &quot;Start Angle plus 360/N = -90 + 360/2 = +90&quot; degrees.
 </P><P>
-To create new output routings, choose <A HREF="IOSetup.html">&quot;I/O Setup&quot;</A> from the window menu. To switch between your routings, choose the routings name from the list shown at the bottom of the <A HREF="MainFrame.html">Main window</A>.
+To create new output routings, choose <A HREF="IOSetup.html">&quot;I/O Setup&quot;</A> from the window menu. To switch between your routings, choose the routings name from the list shown at the bottom of the <A HREF="ControlRoomFrame.html">control room frame</A>.
 </P><P>
-For technical details refer to the supercollider document <code>PanAz.rtf</code>.
+For technical details refer to the supercollider documentation of the  <code>PanAz</code> UGen.
 </P>
 </body>
 </html>
