--- a/trunk/help/ChannelTrack.html
+++ b/trunk/help/ChannelTrack.html
@@ -12,7 +12,13 @@ For each channel a separate waveform view is shown in the main frame. On the lef
 </P>
 <IMG SRC="ChannelTrack.png" ALT="">
 <P>
-The circle shaped icon indicates the panorama setting for that channel. At the moment these settings are not saved, so when you open a new sound file they are restored to defaults. If you click on the icon, a <A HREF="ChannelPanorama.html">channel panorama window</A> will open which allows you to change the azimuth and divergence of the channel's panorama.
+The circle shaped icon indicates the panorama setting for that channel. At the moment these settings are not saved, so when you open a new sound file they are restored to defaults. If you click on the icon, a <A HREF="ChannelPanorama.html">channel panorama window</A> will open which allows you to change the azimuth and divergence of the channel's panorama. Alternatively, you can open the panorama panel as a popup view next to the mouse, by pressing and holding the button over the icon.
+</P>
+<H2>Track Selection</H2>
+<P>
+When opening a document, all tracks (all audio channel tracks and the marker track) are selected by default, which is indicated by a slight blueish background colour of their name label, as shown in the screenshot above.
+</P><P>
+You can unselect any track that you wish to exclude from cut/copy/paste operations. To unselect a track, <tt>Shift</tt>+<tt>Click</tt> on its name label. Unselected tracks appear with a dark grey background colour under the name label. <tt>Alt</tt>+<tt>Click</tt> selects or unselects all tracks at once. A plain <tt>Click</tt> on an unselected track will select that track and unselect all other tracks. <tt>Meta</tt>+<tt>Click</tt> will toggle between one track being selected and all-tracks-but-one selected.
 </P>
 </body>
 </html>
