--- a/trunk/help/TimelineAxis.html
+++ b/trunk/help/TimelineAxis.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 <h1>Timeline Axis</h1>
-<p>
-The timelime axis displays a ruler scaled and positioned such that the labels correspond to the time frame displayed in waveform overview. The units are either minutes/seconds or sample frames, depending on the setting the the view menu. The current timeline position used for playback and clipboard pasting is indicated by a vertical red bar which can be shifted by clicking and dragging in the timeline axis. The currently active timeline selection (blue shaded) used for delete, cut and copy operations and loop playback
-can be alterted by <code>Shift+Click</code> in the timeline axis. <code>Alt+Click</code> will erase the timeline selection.
-</p>
 <IMG SRC="TimelineAxis.png" ALT="Screenshot of the Timeline Axis">
 <p>
-The numeric timeline position can be altered in the <A HREF="TransportPosition.html">transport palette</A>. The numeric timeline selection can be altered in the <A HREF="ObserverTimeline.html">time tab</A> of the <A HREF="ObserverPalette.html">observer palette</A>. To quickly return to the session beginning, press <code>Return</code> when the timeline frame is focussed.
+The timelime axis displays a ruler scaled and positioned such that the labels correspond to the time frame displayed in waveform overview. The units are either minutes/seconds or sample frames, depending on the setting the the view menu. The current timeline position used for playback and clipboard pasting is indicated by a vertical red bar which can be shifted by clicking and dragging in the timeline axis. The currently active timeline selection (blue shaded) used for delete, cut and copy operations and loop playback
+can be alterted by <tt>Shift</tt>+<tt>Click</tt> in the timeline axis. <tt>Alt</tt>+<tt>Click</tt> will erase the timeline selection.
+</p>
+<p>
+The numeric timeline position can be altered by clicking on the <A HREF="TimelinePosition.html">timeline position display</A> (keyboard <tt>G</tt>). The numeric timeline selection can be altered in the <A HREF="ObserverTimeline.html">time tab</A> of the <A HREF="ObserverPalette.html">observer palette</A>. To quickly return to the session beginning, press <tt>Return</tt> when the timeline frame is focussed.
 </p><p>
-A 'bird's view' of the timeline position and selection is shown in the
+A &quot;bird's eye view&quot; of the timeline position and selection is shown in the
 <A HREF="TimelineScroll.html">timeline scrollbar</A>.
 </p><P>
-Often, it will be more convenient, to use the timeline's <A HREF="TimelineToolPointer.html">pointer to tool</A> to set the timeline position and selected span.
+Often, it will be more convenient to use the timeline's <A HREF="TimelineToolPointer.html">pointer to tool</A> to set the timeline position and selected span directly inside the waveform view.
 </P>
 </body>
 </html>
