--- a/trunk/help/TimelineFrame.html
+++ b/trunk/help/TimelineFrame.html
@@ -26,7 +26,7 @@ The document frame represents an opened audio file (or a compound of multiple mo
 <area shape="rect" coords="315,112,421,134" alt="Transport Controls" href="TransportTools.html">
 <area shape="rect" coords="480,125,563,146" alt="Timeline Axis" href="TimelineAxis.html">
 <area shape="rect" coords="472,153,554,174" alt="Marker Axis" href="MarkerAxis.html">
-<area shape="rect" coords="135,114,216,136" alt="Track Selector" href="TrackSelector.html">
+<area shape="rect" coords="135,114,216,136" alt="Track Selector" href="ChannelTrack.html">
 <area shape="rect" coords="78,408,202,431" alt="Solo, Mute, Panorama" href="ChannelTrack.html">
 <area shape="rect" coords="30,436,108,459" alt="Info Buttons" href="AudioInfo.html">
 <area shape="rect" coords="450,275,533,300" alt="SRC Indicator" href="SampleRateConversion.html">
