--- a/trunk/help/TimelineTools.html
+++ b/trunk/help/TimelineTools.html
@@ -8,7 +8,7 @@
 <body>
 <h1><IMG SRC="iconPointerTool.png" ALT=""><IMG SRC="iconZoomTool.png" ALT="">&nbsp;Timeline Tools</h1>
 <p>
-TO DO...
+There are currently two tools for editing the waveform: The <A HREF="TimelineToolPointer.html">Pointer Tool</A> and the <A HREF="TimelineToolZoom.html">Zoom Tool</A>.
 </P>
 </body>
 </html>
