--- a/trunk/help/TransportTools.html
+++ b/trunk/help/TransportTools.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Transport Tools</title>
+<title>Transport Controls</title>
 <LINK REL="stylesheet" TYPE="text/css" HREF="stylesheet.css">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 </head>
 <body>
-<h1>Transport Tools</h1>
+<h1>Transport Controls</h1>
+<IMG SRC="iconTransportTools.png" ALT="Screenshot of Transport Controls">
 <p>
-The transport tools control realtime playback of the session. From left to right
-you see the Rewind, Stop, Play, Fast Forward button, the Loop. Keyboard shortcuts are <code>Space</code> or <code>Keypad-0</code> for Play/Stop, <code>Numpad-/</code> for Loop. Rewind and Fast Forward will have shortcuts in the next version. <code>Shift + Space</code> will play back at half speed, <code>Shift + Alt + Space</code> will play back at double speed.
-</p>
-<IMG SRC="TransportTools.png" ALT="Screenshot of Transport Controls">
-<p>
+The transport controls are located in the top part of each <A HREF="TimelineFrame.html">document frame</A>. From left to right
+you see the Rewind, Stop, Play, Fast Forward button, and the Loop toggle. Keyboard shortcuts are <tt>Space</tt> or <tt>Numpad-0</tt> for Play/Stop, <tt>Numpad-1</tt> and <tt>Numpad-2</tt> for Rewind and FFwd, <tt>Numpad-/</tt> for Loop toggle. <tt>Shift</tt>+<tt>Space</tt> will play back at half speed, <tt>Shift</tt>+<tt>Alt</tt>+<tt>Space</tt> will play back at double speed.
+</p><p>
 Loop playback: the loop playback uses the current timeline selection and can be
 altered using the <A HREF="TimelineAxis.html">timeline axis</A>, the <A HREF="TimelineToolPointer.html">timeline pointer tool</A> or the <A HREF="ObserverTimeline.html">observer time tab</a>.
 </p>
