--- a/trunk/help/MainFrame.html
+++ b/trunk/help/MainFrame.html
@@ -8,17 +8,21 @@
 <body>
 <h1>Main Window</h1>
 <p>
-this window servers several purposes. it contains a text console display used to print error messages and messages from supercollider. closing the main window will quit eisenkraut. also, the main window contains a button to launch supercollider, the master volume and output routing configuration.
+this window servers several purposes. it contains a text console display used to print error messages and messages from supercollider. closing the main window will quit eisenkraut. also, the main window contains a button to launch supercollider, and some information about the server's CPU load.
 </P>
-<IMG SRC="MainWindow.png" ALT="">
+<IMG SRC="MainWindow.png" ALT="Screenshot of the Main Window">
 <P>
-On the top you see a horizontal slider that controls the main (monitoring) volume. Note that at the moment there is no built-in limiter that prevents audio from distortion if you raise the volume such that samples exceed 0 dBFS. This will be available in a future version.
-</P><p>
 The main part of the window is a console view showing messages both from SuperCollider and runtime errors and messages from Eisenkraut.
 </P><p>
-The button &quot;Dump OSC&quot; is for debugging purposes. However, the list next to it is of importance. It contains all available output routings. An output routing describes how many logical channels are created for playback and how they are mapped to the physical channels of your sound card. To create your own setups, choose <A HREF="IOSetup.html">&quot;I/O Setup&quot;</A> from the window menu. The actual distribution of your sound file's channels onto the output channels is controlled by the channel panorama, accessed from the <A HREF="ChannelTrack.html">channel's track header</A>.
+The button in the bottom right of the window indicates the server status. When having a grey background and text &quot;Boot&quot; the server is currently not running. In this case, pressing the button will boot the server. Once the server is booted, the button will have a yellow background and text &quot;Terminate&quot;. Pressing the button when the server is booted will quit (&quot;terminate&quot;) the server.
+</p><P>
+Note that you can make Eisenkraut automatically boot the server when it is launched, using a setting in the <A HREF="prefsAudio.html">audio preferences</A>.
+</P>
+<H2>Server Status</H2>
+<P>
+The text line at the bottom of the window shows you the sample rate at which the server runs, which is the sample rate at which your audio interface is configured. The sample rate can be changed from the <A HREF="prefsAudio.html">audio preferences</A>. Also shown is the currently CPU usage of the SuperCollider server.
 </P><P>
-the bottom line of the window displays the supercollider status : the sample rate at which it runs, the current average CPU usage and the number of synthesis objects.
+By clicking on the small triangle in the left bottom corner, additional information about the server status are shown, which are mainly for debugging purposes.
 </P>
 </body>
 </html>
