--- a/trunk/help/ObserverPalette.html
+++ b/trunk/help/ObserverPalette.html
@@ -10,7 +10,7 @@
 <p>
 The observer palette displays context information about objects that you work with. Some of this information is editable. The palette consists of socalled 'tabs' (tabulars) which will be selected automatically when you perform certain actions, but which can also be selected manually. The tabs are:</p>
 <UL>
-<LI><A HREF="ObserverCursor.html">Cursor (Csr)</A> is a read-only information tab. not yet implemented!</LI>
+<LI><A HREF="ObserverCursor.html">Cursor (Csr)</A> is a read-only information tab.</LI>
 <LI><A HREF="ObserverTimeline.html">Timeline (Time)</A> shows the current timeline selection</LI>
 </UL>
 </body>
