--- a/trunk/help/TimelineToolPointer.html
+++ b/trunk/help/TimelineToolPointer.html
@@ -8,13 +8,13 @@
 <body>
 <h1><IMG SRC="iconPointerTool.png" ALT="">&nbsp;Pointer Timeline Tool</h1>
 <p>
-The pointer tool (keyboard <code>F1</code>) is used to set the timeline position and selection. When using other tools, this can also be accomplished by using the <A HREF="TimelineAxis.html">timeline axis</A>.
+The pointer tool (keyboard <tt>F5</tt>) is used to set the timeline position and selection. When using other tools, this can also be accomplished by using the <A HREF="TimelineAxis.html">timeline axis</A>.
 </p><p>
-Clicking anywhere in the waveform panel will set the timeline position (the red vertical bar) which indicates the current playhead position and insertion point for paste operations. To quickly return to the session beginning, press <code>Return</code> when the timeline frame is focussed.
+Clicking anywhere in the waveform panel will set the timeline position (the red vertical bar) which indicates the current playhead position and insertion point for paste operations. To quickly return to the session beginning, press <tt>Return</tt> when the <A HREF="TimelineFrame.html">document frame</A> is focussed.
 </P><P>
-<code>Click+Drag</code> will select a portion of the timeline for cut/copy/delete operations (see Edit menu) or signal processing. This selection is also used in <A HREF="TransportTools.html">loop playback</A>. To extent the current selection, use <code>Shift+Click</code>.
+<tt>Click</tt>+<tt>Drag</tt> will select a portion of the timeline for cut/copy/delete operations (see Edit menu) or signal processing. This selection is also used in <A HREF="TransportTools.html">loop playback</A>. To extent the current selection, use <tt>Shift</tt>+<tt>Click</tt>.
 </P><P>
-<code>Meta+Click</code> or <code>Right-Click</code> will select the whole session span (same as Edit-&gt;Select All), or if markers are shown, the span between the previous and next marker. <code>Meta+Shift+Click</code> similarily extends the current selection to include the span between the next and previous markers. <code>Ctrl+Drag</code> will drag the timeline position without making any selection. <code>Double-Click</code> will start playback.
+<tt>Meta</tt>+<tt>Click</tt> or <tt>Right-Click</tt> will select the whole session span (same as Edit-&gt;Select All), or if markers are shown, the span between the previous and next marker. <tt>Meta</tt>+<tt>Shift</tt>+<tt>Click</tt> similarily extends the current selection to include the span between the next and previous markers. <tt>Ctrl</tt>+<tt>Drag</tt> will drag the timeline position without making any selection. <tt>Double-Click</tt> will start playback.
 </p><p>
 A 'bird's view' of the timeline position and selection is shown in the
 <A HREF="TimelineScroll.html">timeline scrollbar</A>.
